affichage des abilities

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="header" class="flex">
             <div id="abilities">
                 <h2>Abilities</h2>
-                <ul>
+                <ul id="liste-abilities">
                     <li>dqdqdq</li>
                     <li>dqdqdq</li>
                     <li>dqdqdq</li>
