--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="container">
         <div id="imageWrapper">
-            <img id="image" src="img/pokeball.png" alt="">
+            <img id="image" class="translate" src="img/pokeball.png" alt="">
         </div>
         <div id="header" class="flex">
             <div id="abilities">
