ajout btn shiny + default et effet hover sur image pas fini

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     </div>
     <div id="container">
         <div id="imageWrapper">
-            <img id="image" class="translate" src="img/pokeball.png" alt="">
+            <img id="image" src="img/pokeball.png" alt="">
         </div>
         <div id="header" class="flex">
-            <div id="abilities">
+            <div id="abilities" class="dispNone">
                 <h2>Abilities</h2>
                 <ul id="liste-abilities">
-                    <li>dqdqdq</li>
-                    <li>dqdqdq</li>
-                    <li>dqdqdq</li>
+                    <li></li>
                 </ul>
             </div>
             <div id="number"></div>
