modif sur les btn et les img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="change-artwork">
         <div id="btn-default">Normal</div>
-    <div id="btn-shiny">Shiny</div>
+        <div id="btn-shiny">Shiny</div>
     </div>
     <div id="container">
         <div id="imageWrapper">
@@ -24,11 +24,14 @@
             <div id="abilities" class="dispNone">
                 <h2>Abilities</h2>
                 <ul id="liste-abilities">
-                    <li></li>
+                    <li>
+                    </li>
                 </ul>
             </div>
-            <div id="number"></div>
-            <div id="name"></div>
+            <div id="infos">
+                <div id="number"></div>
+                <div id="name"></div>
+            </div>
         </div>
     </div>
 
