--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
             <div id="number"></div>
             <div id="name"></div>
+            <div id="name"></div>
         </div>
     </div>
 
